--- a/public/scan-spec-google.html
+++ b/public/scan-spec-google.html
@@ -69,7 +69,7 @@
 </head>
 <body>
 <div class="wrap">
-  <h1>仕様照会 + GoogleDrive 図面ビュー｜scan-spec-google（Airtable不使用）</h1>
+  <h1>仕様照会 + GoogleDrive 図面ビュー｜scan-spec-google（die-master book-wc）</h1>
 
   <div class="row">
     <!-- 左：カメラ -->
