--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
 </head>
 <body>
   <main class="wrap" role="navigation" aria-label="できること三つ">
-    <a class="btn a" href="./scan-spec-google.html"     aria-label="調べる">しらべる</a>
-    <a class="btn b" href="./scan-lookup.html"   aria-label="探す">さがす</a>
-    <a class="btn c" href="./scan-register.html" aria-label="登録する">しまう</a>
+    <a class="btn a" href="./scan-spec-google.html"     aria-label="調べる">知る</a>
+    <a class="btn b" href="./scan-lookup.html"   aria-label="探す">探す</a>
+    <a class="btn c" href="./scan-register.html" aria-label="登録する">仕舞う</a>
   </main>
 
 <script>
