--- a/public/scan-spec-google.html
+++ b/public/scan-spec-google.html
@@ -67,7 +67,7 @@
 </head>
 <body>
 <div class="wrap">
-  <h1>仕様照会 + GoogleDrive 図面ビュー｜scan-spec-google（die-master book-wc[-zu|-si]）</h1>
+  <h1>仕様照会 + GoogleDrive 図面ビュー｜scan-spec-google（die-master book-wc:1110_23）</h1>
 
   <div class="row">
     <!-- 左：カメラ -->
