--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 <body>
   <main class="wrap" role="navigation" aria-label="できること三つ">
     
-    <a class="btn a" href="./scan-spec.html"     aria-label="調べる">知る</a>
+    <a class="btn a" href="./scan-spec-google.html"     aria-label="調べる">知る</a>
     <a class="btn b" href="./scan-lookup.html"   aria-label="探す">探す</a>
     <a class="btn c" href="./scan-register.html" aria-label="登録する">仕舞う</a>
   </main>
